<resources>

    <string name="app_name">Medication Store</string>

    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="category_name">Name</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price $</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_contacts">Contacts</string>
    <string name="currency">$</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="order_button">ORDER</string>
    <string name="delete_button">DELETE</string>
    <string name="editor_activity_title_product_details">Product Details</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="edit_button">EDIT</string>
    <string name="action_edit">Edit</string>
    <string name="action_order">Order</string>
    <string name="editor_insert_product_failed">Insert Product Failed</string>
    <string name="editor_insert_product_successful">Insert Product Successful</string>
    <string name="editor_update_product_failed">Update Product Failed</string>
    <string name="editor_update_product_successful">Update Product Successful</string>
    <string name="editor_delete_product_successful">Delete Product Successful</string>
    <string name="editor_delete_product_failed">Delete Product Failed</string>
    <string name="empty_shop_text">Empty Store…</string>
    <string name="empty_store_subtitle_text">Start adding products to the store</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="all_fields_must_be_entered">All fields must be entered</string>
    <string name="product_not_saved_all_fields_must_be_entered">Product not saved must enter all fields</string>

</resources>
